--- a/Lab1/dabonilla_Lab1.ipynb
+++ b/Lab1/dabonilla_Lab1.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/dabonilla/AlgorithmsUN2022II/blob/main/Lab1/dabonilla_Lab1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "ydW-Cp4REnEe"
       },
       "source": [
@@ -29205,8 +29215,9 @@
         "xxHKurMNIgZQ",
         "QEhgJmF6IgZc"
       ],
-      "name": "dabonilla_Lab1(1).ipynb",
-      "provenance": []
+      "name": "dabonilla_Lab1.ipynb",
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
