--- a/Lab3/dabonillacognitiveclassaapplieddatadciencewithpython.ipynb
+++ b/Lab3/dabonillacognitiveclassaapplieddatadciencewithpython.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMTG/z9YLPY69vaoL+H3cCD",
+      "authorship_tag": "ABX9TyO47Jq/1gUB0l7c5unaMFLz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# www.linkedin.com/in/DanielMauricioBonillaMuñoz\n",
+        "www.linkedin.com/in/DanielMauricioBonillaMuñoz\n",
         "\n"
       ],
       "metadata": {
@@ -62,15 +62,6 @@
       "metadata": {
         "id": "-Rfz-B5IKEJd"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "ADA24nyoKNXC"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
